--- a/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
+++ b/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
@@ -1,4 +1,4 @@
-<Translations defaultLanguage="en">
+<Translations xsi:schemaLocation="./resourceStrings.xsd" defaultLanguage="en">
 	<Language languageCode="en" countryCode="">
 		<!-- Generic Search -->
 		<ResourceString id="itemLabelGenericSearchDISABLED">Disabled</ResourceString>
