Corrected resource String
ResourceString for Album Section headline said 'Picture'-> changed to
'Album'

--- a/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
+++ b/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
@@ -30,7 +30,7 @@
 		<ResourceString id="headerTextMasterViewInfoAreaSearchAreaHeader">Search</ResourceString>
 		<ResourceString id="headerTextMasterViewInfoAreaSearchAreaPicture">Picture</ResourceString>
 		<ResourceString id="labelMasterViewInfoAreaSearchAreaPictureName">Name</ResourceString>
-		<ResourceString id="headerTextMasterViewInfoAreaSearchAreaAlbum">Picture</ResourceString>
+		<ResourceString id="headerTextMasterViewInfoAreaSearchAreaAlbum">Album</ResourceString>
 		<ResourceString id="labelMasterViewInfoAreaSearchAreaAlbumName">Name</ResourceString>
 		<ResourceString id="btnMasterViewInfoAreaSearchAreaSearch">Search</ResourceString>
 		<ResourceString id="btnMasterViewInfoAreaSearchAreaReset">Reset</ResourceString>
