added -alert for empty name/ -strings.trim() / -MaxMin Size

--- a/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
+++ b/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
@@ -71,5 +71,7 @@
 		<ResourceString id="editAttributesName">Name</ResourceString>
 		<ResourceString id="editAttributesCreationDate">Creation Date</ResourceString>
 		<ResourceString id="editAttributesComment">Comment</ResourceString>
+		<ResourceString id="editAttributesAlertTitle">Incompatible Name</ResourceString>
+		<ResourceString id="editAttributesAlertHeaderNameIsEmpty">Picture name must not be empty</ResourceString>
 	</Language>
 </Translations>
