--- a/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
+++ b/Bildverwaltung/bildverwaltung.db-data/src/main/resources/bildverwaltung/dbdata/localisation/resourceStrings.xml
@@ -73,7 +73,7 @@
 		<ResourceString id="editAttributesCreationDate">Creation Date</ResourceString>
 		<ResourceString id="editAttributesComment">Comment</ResourceString>
 		<ResourceString id="editAttributesAlertTitle">Incompatible Name</ResourceString>
-		<ResourceString id="editAttributesAlertPictureSelectionEmpty">Please first select a picture</ResourceString>
+		<ResourceString id="editAttributesAlertPictureSelectionEmpty">Please select a picture</ResourceString>
 		<ResourceString id="editAttributesAlertHeaderNameIsEmpty">Picture name must not be empty</ResourceString>
 	</Language>
 </Translations>
